Upadted References in the Comestics Page

--- a/Cosmetics_and_Skincare.html
+++ b/Cosmetics_and_Skincare.html
@@ -66,7 +66,7 @@
                         </table>
                 </div>
          </section>
-         <section class="Hair_Care_Products">
+         <section class="Makeup_Products">
                 <div class="Section-Alignment">
                     <h3 class="Makeup_Product_Heading">Enhance Your Beauty: Makeup Essentials</h3>
                     <table class="Cosmetics_Table">
@@ -78,28 +78,28 @@
                             <th class="Shampoo_Price2">Price</th>
                         </tr>
                         <tr>
-                            <td class="Table_size2"><h4>Full Fiber Shampoo</h4></td>
+                            <td class="Table_size2"><h4>FIT me Matt + Poreless</h4></td>
                             <td class="Makup_Img_size_adjustment"><img class="Makup_Img_size_adjustment" src="Photos/Product images/FitMe Mat Plus.png"></td>
                             <td class="Brand"><h4>Maybelline</h4></td>
                             <td><p>Fit Me® Matte + Poreless Foundation face makeup. This lightweight foundation mattifies and refines pores and leaves a natural, seamless finish.</p></td>
                             <td><h4>Rs. 3000</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
                         </tr>
                         <tr>
-                            <td><h4>Full Fiber Shampoo</h4></td>
+                            <td><h4>Instant Eraser Eye Mult-Use</h4></td>
                             <td class="Makup_Img_size_adjustment"><img class="Makup_Img_size_adjustment" src="Photos/Product images/Instant Age Rewind Eraser.png" alt=""></td>
                             <td class="Brand"><h4>Maybelline</h4></td>
                             <td><p>Instant Eraser is the do-it-all concealer that moisturizes too! This multi-use concealer does it all: hydrates, conceals, contours and corrects in a click! Get up to 12 hours of moisturizing wear for crease-resistant coverage and a sponge tip applicator. Instant Eraser is vegan, non comedogenic, and formulated without mineral oil, parabens or talc.</p></td>
                             <td><h4>Rs. 3250</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
                         </tr>
                         <tr>
-                            <td><h4>Full Fiber Shampoo</h4></td>
+                            <td><h4>Lash Sensational Sky High</h4></td>
                             <td class="Makup_Img_size_adjustment"><img class="Makup_Img_size_adjustment" src="Photos/Product images/Maybelline Mascara.png" alt=""></td>
                             <td class="Brand"><h4>Maybelline</h4></td>
                             <td><p> Lengthening and volumizing mascara for Sky High lash impact from every angle. Long lasting mascara delivers limitless length and full volume.</p></td>
                             <td><h4>Rs. 4000</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
                         </tr>
                         <tr>
-                            <td><h4>Full Fiber Shampoo</h4></td>
+                            <td><h4>Color Sensational</h4></td>
                             <td class="Makup_Img_size_adjustment"><img class="Makup_Img_size_adjustment" src="Photos/Product images/Color Sensational.png" alt=""></td>
                             <td class="Brand"><h4>Maybelline</h4></td>
                             <td><p>Dubbed Best Classic Red Lipstick Shade of 2020 in the Allure Best of Beauty Awards. Made For All Lipstick makeup features specially selected and obsessively tested pigments that make these universal lipstick shades looks sensational on all complexions.</p></td>
@@ -108,20 +108,6 @@
                 </div>
         </section>
   </main>
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
   <footer>
         <!--Here in the footer tag i have used 'P' instead of using the heading tag which is 'H1, H2 ,H3 & etc', the reason for that is because
         once i use a 'H' tag by default a padding gets added around the text so that the length of the footer and the design gets cluttered even though
@@ -182,7 +168,19 @@
                 <div class="contact1"><img class="Tele-Icon" src="Icons/Telephone Icon.png" alt="">
                 <p >+94777777777</p></div>
             </div>
-        </div> 
+        </div>
+        <!--Bibliography
+                Photos & Icons;
+
+                Full Fiber Shampoo: Full Fiber volume shampoo for thin hair | TRESemmé US (no date). https://www.tresemme.com/us/en/products/shampoo/full-fiber-volume-shampoo-for-thin-hair/. 
+                Full Fiber Conditioner: Full fiber volume conditioner for thin hair | TRESemmé US (no date). https://www.tresemme.com/us/en/products/conditioner/full-fiber-volume-conditioner-for-thin-hair/. 
+                Coconut Oil: Flawless Curls Defining Hair Cream with Coconut Oil | TRESemmé US (no date). https://www.tresemme.com/us/en/products/other-hair-products/flawless-curls-defining-hair-cream-with-coconut-oil/. 
+                Fit Me Matt Poreless: Fit Me® Matte + Poreless Foundation Makeup - Maybelline (2024). https://www.maybelline.com/face-makeup/foundation-makeup/fit-me-matte-poreless-foundation?variant=Warm+Sun. 
+                Instant  Eraser Eye Mult-Use: Instant Age Rewind - Eraser Eye Anti-Age Concealer | Maybelline (2019). https://www.maybelline.co.uk/all-products/face-makeup/concealer/instant-age-rewind-eraser-dark-circles-treatment-concealer?variant=cool-ivory. 
+                Lash Sensational Sky High: Lash Sensational Sky High® Washable Mascara - Maybelline (2024). https://www.maybelline.com/eye-makeup/mascara/lash-sensational-sky-high-washable-mascara-makeup?variant=Blue+Mist. 
+                Color Sensational: Color Sensational® made for all lipstick - Maybelline (2024). https://www.maybelline.com/lip-makeup/lipstick/color-sensational-made-for-all-lipstick?variant=Ruby+For+Me 
+
+         --> 
   </footer> 
 </body>
 </html> 
