Updated the options in order page along witht that made minor changes to the form

--- a/Order Page.html
+++ b/Order Page.html
@@ -73,11 +73,31 @@
                                     <option value="ghee100ml">Ghee (100ml)</option>
                                     <option value="ghee200ml">Ghee (200ml)</option>
                                     <option value="ghee500ml">Ghee (500ml)</option>
+                                    <option value="ThaiEggPlant">Thai EggPlant (250g)</option>
+                                    <option value="BitterMelon">Bitter Melon (300g)</option>
+                                    <option value="DaikonRadish">Daikon Radish (300g)</option>
+                                    <option value="DargonFruit">Dragon Fruit (1kg)</option>
+                                    <option value="LettuceOP">Lettuce (100g)</option>
+                                    <option value="Tomato">Tomato (70g)</option>
+                                    <option value="CarrotOP">Carrot (300g)</option>
+                                    <option value="Broccoli">Broccoli (500g)</option>
+                                    <option value="BellPepperOP">Bell Pepper (500g)</option>
+                                    <option value="Cucumber">Cucumbers (500g)</option>
+                                    <option value="SpringAsparagus">Spring Asparagus (200g)</option>
+                                    <option value="SummerSweetCorn">Summer Sweet Corn (400g)</option>
+                                    <option value="Pumpkin">Pumpkin (300g)</option>
+                                    <option value="FullFiberShampoo">Full Fiber Shampoo</option>
+                                    <option value="FullFiberConditioner">Full Fiber Conditioner</option>
+                                    <option value="CoconutOil">Coconut Oil</option>
+                                    <option value="FITmePoreless">FIT me Matt + Poreless</option>
+                                    <option value="InstantEraserEye">Instant Eraser Eye Mult-Use</option>
+                                    <option value="LashSensationalSkyHigh">Lash Sensational Sky High</option>
+                                    <option value="ColorSensational">Color Sensational</option>
                             </select> <br><br> 
                             <label for="Quantity">Quantity:</label>
                             <input type="number" placeholder="Enter the Quantity"><br><br>
                             <label for="address">Address:</label>
-                            <input placeholder="Enter the Address"><br><br>
+                            <Textarea placeholder="Enter your Address"></Textarea><br><br>
                             <label for="zipcode">Zip Code:</label>
                             <input type="number" placeholder="Enter the Zip Code" maxlength="5"><br><br>
                         </form>
