Made few changes in all pages and few stylings relatedd to mobile responsivness

--- a/Dairy Products.html
+++ b/Dairy Products.html
@@ -35,7 +35,8 @@
             <div class="Section-Alignment">
                 <h1 class="Diary-Main-Heading">Diary Products</h1>
                 <img class="Diary-Product-Main-Img" src="Photos/Product images/Diary Products Main.png" alt="dairyMainimg">
-                <p>Greetings and welcome to our Dairy Products Page, where you can find a great selection of dairy basics that combine quality and freshness. To satisfy your culinary demands, we carefully choose only the best options, from silky yogurts to premium cheeses and creamy milk. Whether you're shopping for everyday essentials or creating a gourmet meal, our wide selection of dairy treats is sure to make your shopping trip more enjoyable. Examine our carefully chosen merchandise to experience the taste of quality with each purchase.</p>
+                <p>
+                    Welcome to our Dairy Products Page! Here, you will find a selection of high-quality dairy essentials that ensure both freshness and flavor. Our offerings include creamy milk, rich ghee, and smooth curd, all carefully chosen to meet your culinary needs. Whether you are looking for everyday staples or ingredients to enhance your gourmet dishes, our dairy products promise to deliver the best in taste and quality. Explore our range and savor the difference with each purchase.</p>
                 <hr class="Line-Seperation">
             </div>
        <section class="Milk-Section">
@@ -76,7 +77,7 @@
                     <div class="Text-Alignment"><h3 class="Curdtxt1">Rich & Creamy Curd<br>Rs.500<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3></div>
                     <h3 class="Curdtxt2">Set Curd (1kg)<br>Rs.1500<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
                     <h3 class="Curdtxt3">Set Curd (500g)<br>Rs.800<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
-                    <h3 class="Curdtxt4">Regular Curd (500ml)<br>Rs.300<<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
+                    <h3 class="Curdtxt4">Regular Curd (500ml)<br>Rs.300<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
                 </div>
             </div>
         </section>
@@ -100,67 +101,67 @@
         </section>
   </main> 
   <footer>
-            <!--Here in the footer tag i have used 'P' instead of using the heading tag which is 'H1, H2 ,H3 & etc', the reason for that is because
-            once i use a 'H' tag by default a padding gets added around the text so that the length of the footer and the design gets cluttered even though
-            i try to specify the height. so i have use 'p' tags which are usually being used to pharagraphs but i assigned classes indiviually for those 
-            and applied stylings in the CSS sheet-->
-            <div class="Tile-and-logo">
-                <img class="Logo-icon" src="Logo/Logo Edited.png">
-                <h1 class="Footer-Title">PRIMEGROCERS</h1>
-            </div>
-            <div class="Footer-contentt">
-                <div class="Locations-f">
-                    <div class="Colombo-Details">
-                        <div class="Colombo-Footer">
-                            <img class="Location-Icon" src="Icons/Location Icon.png">
-                            <p class="CMB-tItLE">Colombo</p>
+                        <!--Here in the footer tag i have used 'P' instead of using the heading tag which is 'H1, H2 ,H3 & etc', the reason for that is because
+                once i use a 'H' tag by default a padding gets added around the text so that the length of the footer and the design gets cluttered even though
+                i try to specify the height. so i have use 'p' tags which are usually being used to pharagraphs but i assigned classes indiviually for those 
+                and applied stylings in the CSS sheet-->
+                <div class="Tile-and-logo-Footer">
+                    <img class="Logo-icon" src="Logo/Logo Edited.png">
+                    <h1 class="Footer-Title">PRIMEGROCERS</h1>
+                </div>
+                <div class="Footer-contentt">
+                    <div class="Locations-f">
+                        <div class="Colombo-Details">
+                            <div class="Colombo-Footer">
+                                <img class="Location-Icon" src="Icons/Location Icon.png">
+                                <p class="CMB-tItLE">Colombo</p>
+                            </div>
+                            <div class="Colombo-F-Content">
+                                <p class="Address-cmb">No. 388 Union Pl, Colombo 00200</p><br>
+                                <a class="Map-link-f" href="https://maps.app.goo.gl/XCNUgkmRay71Mscy5">See on Map➚</a>    
+                            </div>
                         </div>
-                        <div class="Colombo-F-Content">
-                            <p class="Address-cmb">No. 388 Union Pl, Colombo 00200</p><br>
-                            <a class="Map-link-f" href="https://maps.app.goo.gl/XCNUgkmRay71Mscy5">See on Map➚</a>    
+                        <div class="Kandy-Details">
+                            <div class="Colombo-Footer">
+                                <img class="Location-Icon" src="Icons/Location Icon.png">
+                                <p class="CMB-tItLE">Kandy</p>
+                            </div>
+                            <div class="Colombo-F-Content">
+                                <p class="Address">No.542 Peradeniya Rd, Kandy 20000</p>
+                                <a class="Map-link-f" href="https://maps.app.goo.gl/22VL6EiVVVLDYv6w8">See on Map➚</a>    
+                            </div>
                         </div>
                     </div>
-                    <div class="Kandy-Details">
-                        <div class="Colombo-Footer">
-                            <img class="Location-Icon" src="Icons/Location Icon.png">
-                            <p class="CMB-tItLE">Kandy</p>
-                        </div>
-                        <div class="Colombo-F-Content">
-                            <p class="Address">No.542 Peradeniya Rd, Kandy 20000</p>
-                            <a class="Map-link-f" href="https://maps.app.goo.gl/22VL6EiVVVLDYv6w8">See on Map➚</a>    
+                    <div class="Mail-and-Contact">
+                        <p class="Mail-title">Mail us</p>
+                        <div class="Mail">
+                            <br><br>
+                            <img class="Mail-Icon" src="Icons/Mail Icon.png">
+                            <p class="Mail-Address">primegrocery@gmail.com</p>
                         </div>
                     </div>
-                </div>
-                <div class="Mail-and-Contact">
-                    <p class="Mail-title">Mail us</p>
-                    <div class="Mail">
-                        <br><br>
-                        <img class="Mail-Icon" src="Icons/Mail Icon.png">
-                        <p class="Mail-Address">primegrocery@gmail.com</p>
+                    <div class="Payment-Methods">
+                        <p class="Payments">Accepted Payment Methods</p>
+                        <div class="Payment-Icons">
+                            <img class="CARD-Icons" src="Icons/Visa-Icon.png" alt="">
+                            <img class="CARD-Icons" src="Icons/Mastercard-Icon.png" alt="">
+                            <img class="CARD-Icons-American" src="Icons/American-Icon.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="Payment-Methods">
-                    <p class="Payments">Accepted Payment Methods</p>
-                    <div class="Payment-Icons">
-                        <img class="CARD-Icons" src="Icons/Visa-Icon.png" alt="">
-                        <img class="CARD-Icons" src="Icons/Mastercard-Icon.png" alt="">
-                        <img class="CARD-Icons-American" src="Icons/American-Icon.png" alt="">
+                    <div class="socials">
+                        <p class="Social-Title">Follow us on</p>
+                        <a href="https://www.instagram.com/accounts/login/"><img class="socials-iconi" src="Icons/Instagram Icon.png"</a>
+                        <a href="https://www.facebook.com/"><img class="socials-iconf" src="Icons/Facebook Icon.png"></a>
+                        <a href="https://twitter.com/login"><img class="socials-icont" src="Icons/Twitter Icon.png"></a>
+                        <a href="https://www.tiktok.com/explore"><img class="socials-iconTT" src="Icons/Tiktok Icon.png"></a>
                     </div>
-                </div>
-                <div class="socials">
-                    <p class="Social-Title">Follow us on</p>
-                    <a href="https://www.instagram.com/accounts/login/"><img class="socials-iconi" src="Icons/Instagram Icon.png"</a>
-                    <a href="https://www.facebook.com/"><img class="socials-iconf" src="Icons/Facebook Icon.png"></a>
-                    <a href="https://twitter.com/login"><img class="socials-icont" src="Icons/Twitter Icon.png"></a>
-                    <a href="https://www.tiktok.com/explore"><img class="socials-iconTT" src="Icons/Tiktok Icon.png"></a>
-                </div>
-                <div class="Contacts-1">
-                    <p class="Contact-Title">Contact</p>
-                    <div class="contact1"><img class="Tele-Icon" src="Icons/Telephone Icon.png" alt="">
-                        <p >+94777777777</p></div>
-                </div>
-                </div>
-        </div>  
+                    <div class="Contacts-1">
+                        <p class="Contact-Title">Contact</p>
+                        <div class="contact1"><img class="Tele-Icon" src="Icons/Telephone Icon.png" alt="">
+                            <p >+94777777777</p></div>
+                    </div>
+                    </div>
+            </div> 
          <!---Bibliography
 
             Photos & Icons;
