--- a/Cosmetics_and_Skincare.html
+++ b/Cosmetics_and_Skincare.html
@@ -109,66 +109,67 @@
         </section>
   </main>
   <footer>
-        <!--Here in the footer tag i have used 'P' instead of using the heading tag which is 'H1, H2 ,H3 & etc', the reason for that is because
-        once i use a 'H' tag by default a padding gets added around the text so that the length of the footer and the design gets cluttered even though
-        i try to specify the height. so i have use 'p' tags which are usually being used to pharagraphs but i assigned classes indiviually for those 
-        and applied stylings in the CSS sheet-->
-        <div class="Tile-and-logo">
-            <img class="Logo-icon" src="Logo/Logo Edited.png">
-            <h1 class="Footer-Title">PRIMEGROCERS</h1>
-        </div>
-        <div class="Footer-contentt">
-            <div class="Locations-f">
-                <div class="Colombo-Details">
-                    <div class="Colombo-Footer">
-                        <img class="Location-Icon" src="Icons/Location Icon.png">
-                        <p class="CMB-tItLE">Colombo</p>
-                    </div>
-                    <div class="Colombo-F-Content">
-                        <p class="Address-cmb">No. 388 Union Pl, Colombo 00200</p><br>
-                        <a class="Map-link-f" href="https://maps.app.goo.gl/XCNUgkmRay71Mscy5">See on Map➚</a>    
-                    </div>
+                   <!--Here in the footer tag i have used 'P' instead of using the heading tag which is 'H1, H2 ,H3 & etc', the reason for that is because
+                once i use a 'H' tag by default a padding gets added around the text so that the length of the footer and the design gets cluttered even though
+                i try to specify the height. so i have use 'p' tags which are usually being used to pharagraphs but i assigned classes indiviually for those 
+                and applied stylings in the CSS sheet-->
+                <div class="Tile-and-logo-Footer">
+                    <img class="Logo-icon" src="Logo/Logo Edited.png">
+                    <h1 class="Footer-Title">PRIMEGROCERS</h1>
                 </div>
-                <div class="Kandy-Details">
-                    <div class="Colombo-Footer">
-                        <img class="Location-Icon" src="Icons/Location Icon.png">
-                        <p class="CMB-tItLE">Kandy</p>
+                <div class="Footer-contentt">
+                    <div class="Locations-f">
+                        <div class="Colombo-Details">
+                            <div class="Colombo-Footer">
+                                <img class="Location-Icon" src="Icons/Location Icon.png">
+                                <p class="CMB-tItLE">Colombo</p>
+                            </div>
+                            <div class="Colombo-F-Content">
+                                <p class="Address-cmb">No. 388 Union Pl, Colombo 00200</p><br>
+                                <a class="Map-link-f" href="https://maps.app.goo.gl/XCNUgkmRay71Mscy5">See on Map➚</a>    
+                            </div>
+                        </div>
+                        <div class="Kandy-Details">
+                            <div class="Colombo-Footer">
+                                <img class="Location-Icon" src="Icons/Location Icon.png">
+                                <p class="CMB-tItLE">Kandy</p>
+                            </div>
+                            <div class="Colombo-F-Content">
+                                <p class="Address">No.542 Peradeniya Rd, Kandy 20000</p>
+                                <a class="Map-link-f" href="https://maps.app.goo.gl/22VL6EiVVVLDYv6w8">See on Map➚</a>    
+                            </div>
+                        </div>
                     </div>
-                    <div class="Colombo-F-Content">
-                        <p class="Address">No.542 Peradeniya Rd, Kandy 20000</p>
-                        <a class="Map-link-f" href="https://maps.app.goo.gl/22VL6EiVVVLDYv6w8">See on Map➚</a>    
+                    <div class="Mail-and-Contact">
+                        <p class="Mail-title">Mail us</p>
+                        <div class="Mail">
+                            <br><br>
+                            <img class="Mail-Icon" src="Icons/Mail Icon.png">
+                            <p class="Mail-Address">primegrocery@gmail.com</p>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="Mail-and-Contact">
-                <p class="Mail-title">Mail us</p>
-                <div class="Mail">
-                    <br><br>
-                    <img class="Mail-Icon" src="Icons/Mail Icon.png">
-                    <p class="Mail-Address">primegrocery@gmail.com</p>
-                </div>
-            </div>
-            <div class="Payment-Methods">
-                <p class="Payments">Accepted Payment Methods</p>
-                <div class="Payment-Icons">
-                    <img class="CARD-Icons" src="Icons/Visa-Icon.png" alt="">
-                    <img class="CARD-Icons" src="Icons/Mastercard-Icon.png" alt="">
-                    <img class="CARD-Icons-American" src="Icons/American-Icon.png" alt="">
-                </div>
-            </div>
-            <div class="socials">
-                <p class="Social-Title">Follow us on</p>
-                <a href="https://www.instagram.com/accounts/login/"><img class="socials-iconi" src="Icons/Instagram Icon.png"</a>
-                <a href="https://www.facebook.com/"><img class="socials-iconf" src="Icons/Facebook Icon.png"></a>
-                <a href="https://twitter.com/login"><img class="socials-icont" src="Icons/Twitter Icon.png"></a>
-                <a href="https://www.tiktok.com/explore"><img class="socials-iconTT" src="Icons/Tiktok Icon.png"></a>
-            </div>
-            <div class="Contacts-1">
-                <p class="Contact-Title">Contact</p>
-                <div class="contact1"><img class="Tele-Icon" src="Icons/Telephone Icon.png" alt="">
-                <p >+94777777777</p></div>
-            </div>
-        </div>
+                    <div class="Payment-Methods">
+                        <p class="Payments">Accepted Payment Methods</p>
+                        <div class="Payment-Icons">
+                            <img class="CARD-Icons" src="Icons/Visa-Icon.png" alt="">
+                            <img class="CARD-Icons" src="Icons/Mastercard-Icon.png" alt="">
+                            <img class="CARD-Icons-American" src="Icons/American-Icon.png" alt="">
+                        </div>
+                    </div>
+                    <div class="socials">
+                        <p class="Social-Title">Follow us on</p>
+                        <a href="https://www.instagram.com/accounts/login/"><img class="socials-iconi" src="Icons/Instagram Icon.png"</a>
+                        <a href="https://www.facebook.com/"><img class="socials-iconf" src="Icons/Facebook Icon.png"></a>
+                        <a href="https://twitter.com/login"><img class="socials-icont" src="Icons/Twitter Icon.png"></a>
+                        <a href="https://www.tiktok.com/explore"><img class="socials-iconTT" src="Icons/Tiktok Icon.png"></a>
+                    </div>
+                    <div class="Contacts-1">
+                        <p class="Contact-Title">Contact</p>
+                        <div class="contact1"><img class="Tele-Icon" src="Icons/Telephone Icon.png" alt="">
+                            <p >+94777777777</p></div>
+                    </div>
+                    </div>
+            </div> 
         <!--Bibliography
                 Photos & Icons;
 
