--- a/Vegetables.html
+++ b/Vegetables.html
@@ -70,7 +70,7 @@
                 </div> 
                 <hr class="Vegetable-Page-Content-line-Seperation">
             </div>
-    </section>
+        </section>
         <section class="Seasonal-Specialties-Section">
             <div class="Vegetable-Page-Alignment">
                 <h2 class="Seasonal-Specialties-Heading">Seasonal Specialties</h2>
@@ -96,10 +96,11 @@
                         <h3>Pumpkin (300g)<br>Rs.70<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
                     </div>
                 </div>
+            </div>    
         </section>
    </main>     
   <footer>
-                      <!--Here in the footer tag i have used 'P' instead of using the heading tag which is 'H1, H2 ,H3 & etc', the reason for that is because
+                <!--Here in the footer tag i have used 'P' instead of using the heading tag which is 'H1, H2 ,H3 & etc', the reason for that is because
                 once i use a 'H' tag by default a padding gets added around the text so that the length of the footer and the design gets cluttered even though
                 i try to specify the height. so i have use 'p' tags which are usually being used to pharagraphs but i assigned classes indiviually for those 
                 and applied stylings in the CSS sheet-->
